--- a/index.html
+++ b/index.html
@@ -373,6 +373,10 @@
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
   <script src="//code.tidio.co/lvzfxi6m8wa1iomkkfl6cbmsaduf2dko.js" async></script>
+   <script>
+    $('.owl-carousel').trigger('destroy.owl.carousel');
+
+  </script>
 
 </body>
 
