--- a/index.html
+++ b/index.html
@@ -374,13 +374,8 @@
   <script src="js/main.js"></script>
   <script src="//code.tidio.co/lvzfxi6m8wa1iomkkfl6cbmsaduf2dko.js" async></script>
    <script>
-    $('.owl-carousel').trigger('destroy.owl.carousel'); // Destroy current instance
+    $('.owl-carousel').off();
 
-$('.owl-carousel').owlCarousel({
-    items: 1,
-    loop: false,
-    autoplay: false
-});
 
   </script>
 
