--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -37,6 +37,11 @@
             padding: 8px;
             border-radius: 4px;
         }
+        .owl-carousel {
+    overflow: auto !important; /* Allow scrolling */
+    touch-action: auto !important; /* Enable touch gestures */
+    -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+}
     </style>
 </head>
 
