--- a/contact-us.html
+++ b/contact-us.html
@@ -36,6 +36,9 @@
         padding: 8px;
         border-radius: 4px;
       }
+	    .owl-carousel.owl-drag .owl-item {
+      touch-action: auto !important;
+    }
     </style>
   </head>
   <body>
