--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -37,6 +38,9 @@
       background-color: #fff;
       padding: 8px;
       border-radius: 4px;
+    }
+    .owl-carousel.owl-drag .owl-item {
+      touch-action: auto !important;
     }
   </style>
 </head>
