--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -37,6 +37,9 @@
             padding: 8px;
             border-radius: 4px;
         }
+        .owl-carousel.owl-drag .owl-item {
+      touch-action: auto !important;
+    }
     </style>
 </head>
 
