--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -94,7 +94,7 @@
 
 
                 <div class="col-md-12">
-                    <div class="markdown prose w-full break-words dark:prose-invert light">
+                    <div>
                         <h3><strong>Terms and Conditions</strong></h3>
                         <p>Welcome to <strong>Swift Node Web</strong>! By accessing or using our website and services,
                             you agree to comply with and be bound by the following Terms and Conditions. Please read
