--- a/index.html
+++ b/index.html
@@ -378,7 +378,9 @@
   <script src="js/main.js"></script>
   <script src="//code.tidio.co/lvzfxi6m8wa1iomkkfl6cbmsaduf2dko.js" async></script>
   
-
+<script async src="https://cse.google.com/cse.js?cx=6567e219c39ea4542">
+</script>
+<div class="gcse-search"></div>
 </body>
 
 </html>
